--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <meta name="description" content="SwiftPulse Logistics offers fast, reliable transportation and freight services across the nation.">
   <meta name="keywords" content="transportation, logistics, freight, shipping, SwiftPulse Logistics">
   <meta name="author" content="SwiftPulse Logistics">
+  <meta property="og:title" content="SwiftPulse Logistics - Nationwide Freight Solutions">
+  <meta property="og:description" content="Fast, reliable, and cost-effective logistics solutions tailored to your transportation needs.">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://via.placeholder.com/1200x630?text=SwiftPulse+Logistics">
+  <meta property="og:url" content="https://swiftpulse-logistics.pages.dev">
   <title>SwiftPulse Logistics - Nationwide Freight Solutions</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="icon" href="https://via.placeholder.com/32?text=SP" type="image/png">
 </head>
 <body class="font-sans text-gray-800 bg-gray-50">
   <!-- Navigation -->
@@ -39,17 +45,17 @@
       <div class="relative overflow-hidden">
         <div class="flex space-x-6 snap-x snap-mandatory overflow-x-auto pb-4">
           <div class="flex-none w-80 bg-gray-100 p-6 rounded-lg shadow-md snap-center">
-            <img src="https://via.placeholder.com/300x200" alt="Full Truckload Shipping" class="w-full h-40 object-cover rounded mb-4">
+            <img src="https://via.placeholder.com/300x200?text=Truckload+Shipping" alt="Full Truckload Shipping" class="w-full h-40 object-cover rounded mb-4">
             <h4 class="text-xl font-semibold mb-2">Full Truckload</h4>
             <p>Dedicated trucks for large shipments, ensuring speed and security.</p>
           </div>
           <div class="flex-none w-80 bg-gray-100 p-6 rounded-lg shadow-md snap-center">
-            <img src="https://via.placeholder.com/300x200" alt="Less-Than-Truckload Shipping" class="w-full h-40 object-cover rounded mb-4">
+            <img src="https://via.placeholder.com/300x200?text=LTL+Shipping" alt="Less-Than-Truckload Shipping" class="w-full h-40 object-cover rounded mb-4">
             <h4 class="text-xl font-semibold mb-2">LTL Shipping</h4>
             <p>Cost-effective solutions for smaller loads with flexible scheduling.</p>
           </div>
           <div class="flex-none w-80 bg-gray-100 p-6 rounded-lg shadow-md snap-center">
-            <img src="https://via.placeholder.com/300x200" alt="Warehousing Solutions" class="w-full h-40 object-cover rounded mb-4">
+            <img src="https://via.placeholder.com/300x200?text=Warehouse" alt="Warehousing Solutions" class="w-full h-40 object-cover rounded mb-4">
             <h4 class="text-xl font-semibold mb-2">Warehousing</h4>
             <p>Secure storage and inventory management for your goods.</p>
           </div>
